--- a/testapp/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/testapp/en.lproj/MainStoryboard_iPhone.storyboard
@@ -19,7 +19,6 @@
                     <navigationBar key="navigationBar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="0.0" placeholderIntrinsicHeight="40" barStyle="black" id="4">
                         <rect key="frame" x="0.0" y="0.0" width="0.0" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" red="0.51764705882352935" green="0.26666666666666666" blue="0.20392156862745098" alpha="1" colorSpace="calibratedRGB"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         </textAttributes>
@@ -182,7 +181,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <toolbar hidden="YES" opaque="NO" clearsContextBeforeDrawing="NO" tag="6" contentMode="scaleToFill" barStyle="black" translatesAutoresizingMaskIntoConstraints="NO" id="9rZ-qx-IcB">
+                                        <toolbar hidden="YES" clearsContextBeforeDrawing="NO" tag="6" contentMode="scaleToFill" barStyle="black" translatesAutoresizingMaskIntoConstraints="NO" id="9rZ-qx-IcB">
                                             <rect key="frame" x="0.0" y="36" width="320" height="44"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                             <items>
@@ -326,6 +325,7 @@
                                     <outlet property="date" destination="zdO-uz-aAK" id="uXg-nJ-zrw"/>
                                     <outlet property="fullImage" destination="lkx-KK-aF6" id="000-rK-7PL"/>
                                     <outlet property="miniImage" destination="TSI-bh-WYZ" id="y1P-bH-CyU"/>
+                                    <outlet property="options" destination="9rZ-qx-IcB" id="9FV-aP-IRH"/>
                                     <outlet property="postTypeImage" destination="TGt-6R-aal" id="IBP-KQ-drv"/>
                                     <outlet property="title" destination="dkU-4R-v4o" id="fwf-rh-AmW"/>
                                 </connections>
@@ -357,7 +357,7 @@
                                         <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TJn-RP-v3q">
                                             <rect key="frame" x="11" y="153" width="48" height="48"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                            <state key="normal" title="Button" image="Default.png">
+                                            <state key="normal" image="Default.png">
                                                 <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                             </state>
                                             <state key="selected" image="FastForward.png"/>
@@ -374,7 +374,7 @@
                                                 <constraint firstAttribute="width" constant="48" id="BZE-X7-CHl"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                            <state key="normal" title="Button" image="Default.png">
+                                            <state key="normal" image="Default.png">
                                                 <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                             </state>
                                             <state key="selected" image="Default.png"/>
@@ -388,7 +388,7 @@
                                         <button opaque="NO" tag="2" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eWK-Pp-LQg">
                                             <rect key="frame" x="136" y="153" width="48" height="48"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                            <state key="normal" title="Button" image="Default.png">
+                                            <state key="normal" image="Default.png">
                                                 <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                             </state>
                                             <state key="selected" image="FastForward.png"/>
@@ -405,7 +405,7 @@
                                                 <constraint firstAttribute="width" constant="48" id="PqH-kN-dzf"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                            <state key="normal" title="Button" image="Default.png">
+                                            <state key="normal" image="Default.png">
                                                 <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                             </state>
                                             <state key="selected" image="FastForward.png"/>
@@ -419,7 +419,7 @@
                                         <button opaque="NO" tag="4" contentMode="center" horizontalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Plt-fv-5Rk">
                                             <rect key="frame" x="258" y="153" width="48" height="48"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                            <state key="normal" title="Button" image="Default.png">
+                                            <state key="normal" image="Default.png">
                                                 <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                             </state>
                                             <state key="selected" image="FastForward.png"/>
