--- a/testapp/FullPost.xib
+++ b/testapp/FullPost.xib
@@ -109,6 +109,7 @@
                 <constraint firstAttribute="trailing" secondItem="OZS-vz-GHF" secondAttribute="trailing" id="y2O-au-TjI"/>
             </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
+            <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
         </view>
     </objects>
