--- a/testapp/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/testapp/en.lproj/MainStoryboard_iPhone.storyboard
@@ -369,7 +369,7 @@
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                             <items>
                                                 <barButtonItem style="plain" systemItem="flexibleSpace" id="duu-g1-wFh"/>
-                                                <barButtonItem tag="7" image="icon_fav.png" style="plain" id="S0Z-9E-GfP">
+                                                <barButtonItem tag="7" image="icon_favourite_off.png" style="plain" id="S0Z-9E-GfP">
                                                     <connections>
                                                         <action selector="onFavourite:" destination="12" id="cqc-si-8uN"/>
                                                     </connections>
@@ -691,7 +691,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="443"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="shb-TD-ztL">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="shb-TD-ztL">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="443"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <connections>
@@ -700,6 +700,12 @@
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="shb-TD-ztL" secondAttribute="bottom" id="13y-OI-1Td"/>
+                            <constraint firstItem="shb-TD-ztL" firstAttribute="leading" secondItem="pKs-kg-7QB" secondAttribute="leading" id="Gl0-uS-K1z"/>
+                            <constraint firstAttribute="trailing" secondItem="shb-TD-ztL" secondAttribute="trailing" id="JSQ-sm-sZX"/>
+                            <constraint firstItem="shb-TD-ztL" firstAttribute="top" secondItem="pKs-kg-7QB" secondAttribute="top" id="ore-7a-Hwk"/>
+                        </constraints>
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Title" id="XNB-2V-5Fb">
@@ -792,7 +798,7 @@
                                     <outlet property="delegate" destination="jaJ-hr-n2n" id="8t4-h3-OCJ"/>
                                 </connections>
                             </tableView>
-                            <toolbar clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bNL-0G-W4C">
+                            <toolbar clearsContextBeforeDrawing="NO" contentMode="bottom" translatesAutoresizingMaskIntoConstraints="NO" id="bNL-0G-W4C">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="130"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <gestureRecognizers/>
@@ -816,9 +822,9 @@
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="z9V-Ws-u5A">
                                         <inset key="imageInsets" minX="0.0" minY="80" maxX="0.0" maxY="0.0"/>
                                     </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="play" id="AlU-MZ-eAy">
-                                        <inset key="imageInsets" minX="0.0" minY="80" maxX="0.0" maxY="0.0"/>
-                                        <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                    <barButtonItem image="player_play_off.png" style="plain" id="AlU-MZ-eAy">
+                                        <inset key="imageInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="-80"/>
+                                        <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                         <connections>
                                             <action selector="togglePlay:" destination="jaJ-hr-n2n" id="LQo-yk-EU4"/>
                                         </connections>
@@ -845,7 +851,7 @@
                                 <rect key="frame" x="285" y="5" width="35" height="40"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <state key="normal" image="simplePlay.png">
+                                <state key="normal" image="player_play_off.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
@@ -1108,9 +1114,10 @@
         <image name="feature_thumb_hl_tab.png" width="63" height="2"/>
         <image name="goto_post_off.png" width="13" height="21"/>
         <image name="icon_fav.png" width="22" height="21"/>
+        <image name="icon_favourite_off.png" width="27" height="26"/>
         <image name="icon_opt.png" width="19" height="17"/>
         <image name="play_icon.png" width="65" height="68"/>
-        <image name="simplePlay.png" width="22" height="22"/>
+        <image name="player_play_off.png" width="23" height="23"/>
         <image name="twitter_off.png" width="32" height="32"/>
         <image name="user_avatar.png" width="45" height="45"/>
     </resources>
