--- a/testapp/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/testapp/en.lproj/MainStoryboard_iPhone.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="QlP-QW-IWM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="QlP-QW-IWM">
     <dependencies>
         <deployment defaultVersion="1552" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
@@ -47,27 +47,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Default.png" translatesAutoresizingMaskIntoConstraints="NO" id="Czh-y2-O1y">
+                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="WIB_BG_blur.png" translatesAutoresizingMaskIntoConstraints="NO" id="Czh-y2-O1y">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             </imageView>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="gaJ-og-w4b">
-                                <rect key="frame" x="142" y="389" width="37" height="37"/>
+                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="icon_loading.png" translatesAutoresizingMaskIntoConstraints="NO" id="4Wz-wJ-jL9">
+                                <rect key="frame" x="40" y="120" width="240" height="240"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </activityIndicatorView>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="kUT-RF-fJz" firstAttribute="top" secondItem="Czh-y2-O1y" secondAttribute="bottom" id="0I9-8d-AcN"/>
-                            <constraint firstItem="kUT-RF-fJz" firstAttribute="top" secondItem="gaJ-og-w4b" secondAttribute="bottom" constant="54" id="93a-LM-RMl"/>
                             <constraint firstItem="kUT-RF-fJz" firstAttribute="top" secondItem="Czh-y2-O1y" secondAttribute="bottom" id="MlW-rB-EVd"/>
                             <constraint firstItem="Czh-y2-O1y" firstAttribute="top" secondItem="2FE-z3-0ZX" secondAttribute="top" id="Nki-Ri-p4U"/>
+                            <constraint firstItem="kUT-RF-fJz" firstAttribute="top" secondItem="Czh-y2-O1y" secondAttribute="bottom" id="QQP-0R-OJa"/>
                             <constraint firstItem="Czh-y2-O1y" firstAttribute="leading" secondItem="2FE-z3-0ZX" secondAttribute="leading" id="u98-MU-PJO"/>
-                            <constraint firstItem="gaJ-og-w4b" firstAttribute="centerX" secondItem="Czh-y2-O1y" secondAttribute="centerX" id="v2g-jL-pD0"/>
+                            <constraint firstAttribute="trailing" secondItem="Czh-y2-O1y" secondAttribute="trailing" id="uyS-Db-wSP"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="m_loadingSpinner" destination="4Wz-wJ-jL9" id="gVe-or-ra1"/>
                         <segue destination="ibF-jf-A7Y" kind="modal" identifier="OpenMain" id="Eiu-5k-XIv"/>
                     </connections>
                 </viewController>
@@ -395,12 +396,12 @@
                                         </imageView>
                                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="top" text="Label" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" preferredMaxLayoutWidth="212" translatesAutoresizingMaskIntoConstraints="NO" id="dkU-4R-v4o">
                                             <rect key="frame" x="73" y="25" width="212" height="44"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </label>
                                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="5" contentMode="right" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zdO-uz-aAK">
-                                            <rect key="frame" x="73" y="20" width="80" height="21"/>
+                                            <rect key="frame" x="73" y="9" width="80" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="21" id="Sla-lh-VVk"/>
@@ -410,13 +411,13 @@
                                             <color key="textColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="alm-pP-9wS">
+                                        <button opaque="NO" contentMode="right" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="alm-pP-9wS">
                                             <rect key="frame" x="275" y="9" width="40" height="60"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="60" id="tSq-fu-VzX"/>
                                             </constraints>
-                                            <state key="normal" image="icon_opt.png">
+                                            <state key="normal" image="option_btn_off.png">
                                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
                                             <connections>
@@ -433,7 +434,7 @@
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     <constraints>
-                                        <constraint firstItem="zdO-uz-aAK" firstAttribute="top" secondItem="ss5-Rp-TxU" secondAttribute="top" constant="16" id="4eg-PE-Lil"/>
+                                        <constraint firstItem="zdO-uz-aAK" firstAttribute="top" secondItem="ss5-Rp-TxU" secondAttribute="top" constant="5" id="4eg-PE-Lil"/>
                                         <constraint firstItem="dkU-4R-v4o" firstAttribute="leading" secondItem="WTm-ai-roo" secondAttribute="leading" constant="73" id="7dp-Xe-U7l"/>
                                         <constraint firstItem="alm-pP-9wS" firstAttribute="top" secondItem="WTm-ai-roo" secondAttribute="top" constant="9" id="BEu-Wd-iDw"/>
                                         <constraint firstItem="TyC-ir-xUV" firstAttribute="leading" secondItem="WTm-ai-roo" secondAttribute="leading" constant="5" id="GxL-Sb-qPd"/>
@@ -867,7 +868,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <scrollView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="36c-M3-I5P">
-                                <rect key="frame" x="0.0" y="5" width="284" height="50"/>
+                                <rect key="frame" x="0.0" y="1" width="284" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -893,7 +894,7 @@
                             <constraint firstItem="Kkj-V8-4eQ" firstAttribute="top" secondItem="yxc-hi-and" secondAttribute="bottom" id="Afk-qw-fMq"/>
                             <constraint firstItem="yxc-hi-and" firstAttribute="leading" secondItem="5m5-aF-d3p" secondAttribute="leading" id="CHl-44-eE3"/>
                             <constraint firstAttribute="trailing" secondItem="ZTI-K9-xQy" secondAttribute="trailing" id="DTf-YW-5V5"/>
-                            <constraint firstItem="ZTI-K9-xQy" firstAttribute="top" secondItem="36c-M3-I5P" secondAttribute="top" constant="-5" id="EVu-7e-iqd"/>
+                            <constraint firstItem="ZTI-K9-xQy" firstAttribute="top" secondItem="36c-M3-I5P" secondAttribute="top" constant="-1" id="EVu-7e-iqd"/>
                             <constraint firstItem="yxc-hi-and" firstAttribute="top" secondItem="5m5-aF-d3p" secondAttribute="top" id="SaP-Q1-Qbc"/>
                             <constraint firstItem="ZTI-K9-xQy" firstAttribute="top" secondItem="bNL-0G-W4C" secondAttribute="top" constant="-96" id="Vae-9h-JNi"/>
                             <constraint firstItem="ZTI-K9-xQy" firstAttribute="top" secondItem="yxc-hi-and" secondAttribute="top" id="YMt-r2-OmR"/>
@@ -1111,13 +1112,16 @@
     <resources>
         <image name="Default.png" width="320" height="480"/>
         <image name="FastForward.png" width="40" height="39"/>
+        <image name="WIB_BG_blur.png" width="641" height="961"/>
         <image name="facebook_off.png" width="32" height="32"/>
         <image name="feature_thumb_hl.png" width="63" height="63"/>
         <image name="feature_thumb_hl_tab.png" width="63" height="2"/>
         <image name="goto_post_off.png" width="13" height="21"/>
         <image name="icon_fav.png" width="22" height="21"/>
         <image name="icon_favourite_off.png" width="27" height="26"/>
+        <image name="icon_loading.png" width="111" height="111"/>
         <image name="icon_opt.png" width="19" height="17"/>
+        <image name="option_btn_off.png" width="12" height="48"/>
         <image name="play_icon.png" width="65" height="68"/>
         <image name="player_play_off.png" width="23" height="23"/>
         <image name="twitter_off.png" width="32" height="32"/>
